<resources>
    <string name="app_name">Sivakasi Market</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">முகப்பு</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_brands">பிராண்ட்</string>
    <string name="menu_products">பொருட்கள்</string>
    <string name="menu_favourite">பிடித்தவை</string>
    <string name="menu_cart">கார்ட்</string>
    <string name="menu_orders">ஆர்டர்ஸ்</string>
    <string name="menu_notification">நோட்டிபிகேஷன்</string>
    <string name="menu_profile">எனது விவரம்</string>
    <string name="menu_signin">உள்நுழைய</string>
    <string name="general">General</string>
    <string name="Communicate">Communicate</string>
    <string name="menu_about_us">எங்களை பற்றி</string>
    <string name="menu_contact_us">தொடர்புகள்</string>
    <string name="top_brands">சிறந்த பிராண்டுகள்</string>
    <string name="recommended">உங்களுக்காக</string>
</resources>